--- a/i3/config
+++ b/i3/config
@@ -313,3 +313,6 @@ bindsym $mod+$shift+$alt+$ctrl+k exec keymapp
 
 # thunar
 bindsym $mod+$shift+$alt+$ctrl+t exec thunar
+
+# obsidian
+bindsym $mod+$shift+$alt+$ctrl+o exec flatpak run md.obsidian.Obsidian
