--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -32,6 +32,8 @@ bind l select-pane -R
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-open'
 # set -g @plugin 'tmux-plugins/tmux-sensible'
 
 set -g @catppuccin_flavour 'mocha' # latte,frappe, macchiato or mocha
