feat(tmux): add vi key bindings in copy-mode.

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -17,7 +17,7 @@ set-option -g status-position top
 # bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -i"
 # set -g status-keys vi
 
-# set-window-option -g mode-keys vi
+set-window-option -g mode-keys vi
 
 # set-option -g focus-events on
 # set-option -sa terminal-features ',xterm-256color:RGB'
