feat(tmux): Custom key-bindings for custom commands

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,5 @@
 unbind r
-bind r source-file ~/.tmux.conf
+bind r source-file ./.tmux.conf
 
 # First window has index one.
 set -g base-index 1
@@ -9,6 +9,8 @@ set -g escape-time 20
 
 # Enable mouse (you don't say?!)
 set -g mouse on
+
+set-option -g focus-events on
 
 set-option -g status-position top
 
@@ -28,6 +30,10 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+bind L run-shell '~/scripts/tmux-docker-compose-logs.sh'
+bind S run-shell '~/scripts/tmux-attach-session.sh' # tmux attach or switch-client
+bind T run-shell '~/scripts/start-stack-with-profiles.sh'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
