--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -30,6 +30,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'jicmou/tmux-quit-vim'
 
 set -g @catppuccin_flavour 'mocha' # latte,frappe, macchiato or mocha
 
