--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,5 @@
 unbind r
-bind r source-file ./.tmux.conf
+bind r source-file $HOME/.config/tmux/tmux.conf
 
 # First window has index one.
 set -g base-index 1
@@ -60,4 +60,4 @@ set -g @catppuccin_directory_text "#{pane_current_path}"
 # set -g @plugin 'git@github.com:user/plugin'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+run '~/.config/tmux/plugins/tpm/tpm'
