feat(i3)!: support env-specific configurations
Added support for including additional configuration files from the
`config.d/` directory. This allows for environment-specific
configurations that are decoupled from the shared configuration.

just place any i3 config file into `~/.config/i3/config.d/` directory.
The file extension must be `.conf` to be included in the main config
file.

A best practice would be to have multiple files by theme (e.g:
background.conf, startup.conf ...)

BREAKING CHANGE: Setting the background has been removed from the main
configuration, so you'll have to move it to your local `.config.d/`
directory. It's wise to do this prior pulling your branch, so you won't
have any regression this way.

```i3
exec-always feh path/to/your/background/file
```

--- a/i3/config
+++ b/i3/config
@@ -33,8 +33,10 @@ exec --no-startup-id dex-autostart --autostart --environment i3
 # screen before suspend. Use loginctl lock-session to lock your screen.
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
-# nice background TODO: use a symlink here to change easily
-exec_always feh --bg-fill ~/Downloads/wp9994268-caspar-david-friedrich-wallpapers.jpg
+# In order to have specific configuration for a local environment,
+# You can add an additional file in the `config.d/` directory
+# This directory is gitignored so we can decouple the config we want to share between environments from the config that is environment specific.
+include ~/.config/i3/config.d/*.conf
 
 # i3lock
 bindsym $mod+o exec i3lock
