--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -25,6 +25,8 @@ bind l select-pane -R
 bind L run-shell '~/scripts/tmux-docker-compose-logs.sh'
 bind S run-shell '~/scripts/tmux-attach-session.sh' # tmux attach or switch-client
 
+bind K kill-server
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux'
