feat(tmux): add key binding to toggle 2 sessions.
<prefix>+Z switches to the previous session.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -27,6 +27,8 @@ bind S run-shell '~/scripts/tmux-attach-session.sh' # tmux attach or switch-clie
 
 bind K kill-server
 
+# Quickly toggle 2 sessions
+bind Z switch-client -l
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux'
