fix(tmux): fix tmux-steeple-local installation

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -22,8 +22,8 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-bind L run-shell '~/scripts/tmux-docker-compose-logs.sh'
-bind S run-shell '~/scripts/tmux-attach-session.sh' # tmux attach or switch-client
+# bind L run-shell '~/scripts/tmux-docker-compose-logs.sh'
+run-shell '$HOME/steeple-org/tmux-steeple-local/tmux-steeple-local.tmux'
 
 bind K kill-server
 
@@ -35,6 +35,7 @@ set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'jicmou/tmux-quit-vim'
+set -g @plugin 'jicmou/tmux-fzf-switch-session'
 
 set -g @catppuccin_flavour 'mocha' # latte,frappe, macchiato or mocha
 
@@ -64,4 +65,4 @@ set -g @catppuccin_directory_text "#{pane_current_path}"
 # set -g @plugin 'git@github.com:user/plugin'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.config/tmux/plugins/tpm/tpm'
+run '$HOME/.config/tmux/plugins/tpm/tpm'
