--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -37,28 +37,27 @@ set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'jicmou/tmux-quit-vim'
 set -g @plugin 'jicmou/tmux-fzf-switch-session'
 
-set -g @catppuccin_flavour 'mocha' # latte,frappe, macchiato or mocha
+# Load catppuccin
+run ~/.config/tmux/plugins/tmux/catppuccin.tmux
 
-set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator " "
-set -g @catppuccin_window_middle_separator " █"
+set -g @catppuccin_flavor 'mocha' # latte,frappe, macchiato or mocha
+set -g @catppuccin_window_status_style "rounded"
+set -g @catppuccin_window_text " #W"
+set -g @catppuccin_window_current_text " #W"
 set -g @catppuccin_window_number_position "right"
+set -g @catppuccin_status_connect_separator "yes"
 
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_default_text "#W"
+# Make the status line pretty and add some modules
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_session}"
+set -ag status-right "#{E:@catppuccin_status_application}"
+set -ag status-right "#{E:@catppuccin_status_directory}"
+set -ag status-right "#{E:@catppuccin_status_uptime}"
 
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#W"
-
-set -g @catppuccin_status_modules_right "directory session"
-set -g @catppuccin_status_left_separator  " "
-set -g @catppuccin_status_right_separator ""
-set -g @catppuccin_status_right_separator_inverse "no"
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_connect_separator "no"
-
-set -g @catppuccin_directory_text "#{pane_current_path}"
-
+set -g @catppuccin_directory_text " #{pane_current_path}"
+#
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'github_username/plugin_name#branch'
