feat(nvim): add keybinding for display-popup
D it will be. opens a popup window in the same current folder as the
current pane.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -26,6 +26,7 @@ bind l select-pane -R
 run-shell '$HOME/steeple-org/tmux-steeple-local/tmux-steeple-local.tmux'
 
 bind K kill-server
+bind P display-popup
 
 # Quickly toggle 2 sessions
 bind Z switch-client -l
