--- a/i3/config
+++ b/i3/config
@@ -51,6 +51,9 @@ exec xset r rate 300 100
 # Disable DPMS features (Energy Star)
 exec xset -dpms
 
+# Set double keyboard layouts, us-altgr-intl & fr-ergol. Press alt+ctrl to toggle
+exec setxkbmap -layout us,fr -variant altgr-intl,ergol -option grp:ctrl_alt_toggle
+
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% && $refresh_i3status
@@ -316,4 +319,3 @@ bindsym $mod+$shift+$alt+$ctrl+s exec spotify
 
 # thunderbird
 bindsym $mod+$shift+$alt+$ctrl+t exec thunderbird
-
